tests/vertical-slice/reject/link_monitor_pending_cluster2.hew
// Value-needed monitor() remains rejected until MIR/codegen can construct
// MonitorRef from the hew_actor_monitor ref_id return.
actor Probe {
    receive fn ping() {}
}

fn main() {
    let p = spawn Probe;
    let m: MonitorRef = monitor(p);
    let _ = m;
}
